# pollen_traquaire

./: Cargo.toml  README.md
src/: index.html  main.rs  scrapper.rs
src/static/: style.css
templates/: index.html.tera
