[package]
name = "pollen_traquaire"
version = "0.1.0"
authors = ["Mattéo Decorsaire <mattdecorsaire@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
rocket = "0.5.0-rc.1"
serde = {version = "1.0.126", features = ["derive"]}
serde_json = "1.0.64"
reqwest = {version = "0.11.4", features = ["json"]}
tokio = {version = "1.7.1", features = ["macros","rt-multi-thread"]}